ABBREVIATIONS:
-----------------------------------------------------
CED - (C)ompact (E)ncoding (D)etection (by Google)
MUI - (M)ultilingual (U)ser (I)nterface
NLS - (N)ew (L)anguage (S)trings (need for translation)
ONI - (ONI)guruma Regex engine
SCI - (SCI)ntilla Library
UCD - (UCD)ARDET is an Encoding Detector Library


=====================================================
Current RC1 Version 5.20.302.(build_#) (2020-03-02)
=====================================================

-----------------------------------------------------
NEW:
-----------------------------------------------------
- Automatic scrolling when dragging text near window edge.
    Patch by McLoo from https://sourceforge.net/p/scintilla/feature-requests/497/.
- Multiple selection on end-of-lines from rectangular selection.
- Infos of sreen/display for "Copy Version Info" button.
- Preserve stream selection in file history (w/ text position remembering).
- Language dependent status bar abreviations.
- Copy directory to clipboard and Open path in explorer.
- Toggle menu bar option.
- Add Lexicographical Line Sort Order.
- CSV Prism Color Lexer.
- Preserve File Modification Date/Time: Option stays until new Session is loaded.
- Save with Original File Date/Time - Ctrl+Alt+F6.

-----------------------------------------------------
CHANGES:
-----------------------------------------------------
- Add file history to to recent docs jumplist.
- AddFileToRecentDocs.
- INI file read/write using synchronous file locking (shared read / exclusive write).
- Reset build-of-the-day number in AppVeyor on new day.
- Change version numbering of build_# (the build number is now daily based).
- Remove AppVeyors build number, add build-of-the-day number, add short version of commit/local build ID.
- Accelerator key remapping: move line up/down vs. jump folds.
- Separate auto esc'd control chars from "transform backslashes" switch in find/replace dialog.
- Increase encoding detection confidence threshold to 92%.