@@ -129,6 +129,7 @@ IDS_MUI_ABOUT_ACKNOWLEDGES  "\
 
 IDS_MUI_ABOUT_MORE  "\
 \\cf0 NotepadCrypt (Version Java)\\tab https://www.nayuki.io/page/notepadcrypt-format-decryptor-java\\par\
+\\cf0 Data Sharing Service\\tab https://workupload.com\\par\
 \\cf0 \\par\
 "
 
