@@ -3,7 +3,7 @@
   <assemblyIdentity
     name="Notepad3"
     processorArchitecture="*"
-    version="5.20.302.7"
+    version="5.20.303.1"
     type="win32"
   />
   <description>Notepad3 RC2</description>
