@@ -8,12 +8,12 @@
 #define SAPPNAME "Notepad3"
 #define VERSION_MAJOR 5
 #define VERSION_MINOR 20
-#define VERSION_REV 302
-#define VERSION_BUILD 7
+#define VERSION_REV 303
+#define VERSION_BUILD 1
 #define SCINTILLA_VER 431
 #define ONIGURUMA_REGEX_VER 6.9.4
 #define UCHARDET_VER 2018.09.27
 #define TINYEXPR_VER 2018.05.11
 #define UTHASH_VER 2.1.0
 #define VERSION_PATCH RC2
-#define VERSION_COMMIT_ID t7820-rk
+#define VERSION_COMMIT_ID dkt1-amr
